--- a/css/style.css
+++ b/css/style.css
@@ -89,6 +89,8 @@ main .box{
     height: 140px;
     display: flex;
     align-items: flex-end;
+    background-image: url("../img/user.gif");
+    background-size: cover;
 }
 
 main .name{
@@ -115,8 +117,56 @@ main .muted::before{
 
 /* settings-bar */
 .setting-bar{
+    display: flex;
     height: 55px;
     width: 100%;
+    text-align: center;
+    font-size: 14px;
+    color: #dcdcdc;
+    background: linear-gradient(#2c2c2c, #181818);
+}
+
+.setting-bar div div i{
+    font-size: 25px;
+    margin-bottom: 5px;
+}
+
+.setting-bar .left-bar{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    width: 15%;
+    padding: 0px 10px;
+}
+
+.setting-bar .mid-bar{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    column-gap: 35px;
+    width: 78%;
+}
+
+.setting-bar .mid-bar .icon:nth-child(4){
+    color: #4bc800;
+}
+
+.setting-bar .mid-bar > .fas{
+    margin-left: -20px;
+}
+
+.setting-bar .right-bar{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 7%;
+    background-color: #4a4b4d;
+    color: #eb534b;
+    font-weight: 600;
+}
+
+.setting-bar .right-bar:hover{
+    background-color: #5b5c5f;
 }
 
 
@@ -131,10 +181,23 @@ main .muted::before{
 } */
 
 .debug .box{
-    background-color: yellow;
+    background-color: grey;
     border: 1px solid black;
 }
 
-.debug .setting-bar{
+/* .debug .setting-bar{
     background-color: pink;
-}
+} */
+
+/* .debug .left-bar{
+    background-color: red;
+} */
+
+/* .debug .mid-bar{
+    background-color: pink;
+} */
+
+/* .debug .right-bar{
+    background-color: red;
+} */
+
